crates/toml_edit/tests/snapshots/invalid/float/double-dot-01.stderr
TOML parse error at line 1, column 19
  |
1 | double-dot-01 = 0..1
  |                   ^
invalid fraction, expected digits
